added styling, small animations, what we do section

--- a/app/index.html
+++ b/app/index.html
@@ -37,7 +37,7 @@
                     <a href="#">SERVICES</a>
                 </li>
                 <li>
-                    <a href="#">WORK</a>
+                    <a href="#">SHOWCASE</a>
                 </li>
                 <li>
                     <a href="#">CONTACT</a>
@@ -83,8 +83,72 @@
         </div>
         <!-- End header -->
 
-        <section>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis, temporibus.</p>
+        <section class="what-we-do text-center">
+            <div class="clearfix">
+                <div class="column full">
+                    <h2>WHAT WE DO</h2>
+                </div>
+            </div>
+            <hr />
+            <div class="clearfix">
+                <div class="column full">
+                    <p class="what-we-do-description">Plugmedia is digital media and marketing agency that helps you transform your vision into a business reality.</p>
+                </div>
+            </div>
+            <hr />
+            <div class="clearfix">
+                <div class="column third what-we-do-block">
+                    <div class="clearfix">
+                        <i class="fa fa-code-fork"></i>
+                    </div>
+                    <div class="clearfix">
+                        <h3>PROCESS</h3>
+                    </div>
+                    <div class="clearfix">
+                        <p>
+                            Swarm tactics and together thinking - we look at the potential advantages of collaboration with each project for greater efficiency and effectiveness.
+                        </p>
+                    </div>
+                </div>
+                <div class="column third what-we-do-block">
+                    <div class="clearfix">
+                        <i class="fa fa-users"></i>
+                    </div>
+                    <div class="clearfix">
+                        <h3>THE POWER OF TOGETHER</h3>
+                    </div>
+                    <div class="clearfix">
+                        <p>
+                            We strive to continually invest our time and resources in the development of digital communities and learning programmes that focus on harnessing the best from technology.
+                        </p>
+                    </div>
+                </div>
+                <div class="column third what-we-do-block">
+                    <div class="clearfix">
+                        <i class="fa fa-lightbulb-o"></i>
+                    </div>
+                    <div class="clearfix">
+                        <h3>PROJECTS</h3>
+                    </div>
+                    <div class="clearfix">
+                        <p>
+                            You are bombarded with hundreds of visual messages every day in varying forms. Our talent is engaging your audience to plug in to your messages.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="clearfix">
+                <div class="column full">
+                    <ul class="what-we-do-list">
+                        <li>Design</li>
+                        <li>Branding</li>
+                        <li>Web</li>
+                        <li>Mobile</li>
+                        <li>Video</li>
+                        <li>Photography</li>
+                    </ul>
+                </div>
+            </div>
         </section>
 
 
