added rough proof of concept for scrolling animation

--- a/app/index.html
+++ b/app/index.html
@@ -82,6 +82,36 @@
             </div>
         </div>
         <!-- End header -->
+        
+        <!-- Scrolling plug -->
+        <div class="plug-scroll" id="plug-scroll">
+            <img src="images/plug-scroll.png" alt="">
+        </div>
+        <!-- End scrolling plug -->
+
+        <section class="test-section">
+            <div class="clearfix">
+                <div class="column fourth flow-opposite">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum, officiis impedit aliquid natus veniam eaque dolore molestias ex nulla quos.
+                </div>
+            </div>
+            <div class="clearfix">
+                <div class="column fourth">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita, aliquam, beatae officia repellat eum delectus quidem placeat iusto libero porro!
+                </div>
+            </div>
+            <div class="clearfix">
+                <div class="column fourth flow-opposite">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, quas consectetur at rerum culpa esse eaque harum quis sequi eum.
+                </div>
+            </div>
+            <div class="clearfix">
+                <div class="column fourth">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione, aliquam omnis impedit voluptatum eveniet quisquam minus ullam quae quas maxime.
+                </div>
+            </div>
+        </section>
+    
 
         <section class="what-we-do text-center">
             <div class="clearfix">
