--- a/app/index.html
+++ b/app/index.html
@@ -40,7 +40,7 @@
                     <a href="#">SHOWCASE</a>
                 </li>
                 <li>
-                    <a href="#">CONTACT</a>
+                    <a href="#">CONNECT</a>
                 </li>
             </ul>
             <a href="#" id="nav-toggle">
@@ -85,7 +85,7 @@
         
         <!-- Scrolling plug -->
         <div class="plug-scroll" id="plug-scroll">
-            <img src="images/plug-scroll.png" alt="">
+            <img src="images/plug-scroll-1.png" alt="">
         </div>
         <!-- End scrolling plug -->
 
@@ -108,6 +108,11 @@
             <div class="clearfix">
                 <div class="column fourth">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione, aliquam omnis impedit voluptatum eveniet quisquam minus ullam quae quas maxime.
+                </div>
+            </div>
+            <div class="clearfix box">
+                <div class="column full">
+                    <div class="div-box"></div>
                 </div>
             </div>
         </section>
@@ -186,6 +191,7 @@
         <!-- bower:js -->
         <script src="../bower_components/jquery/dist/jquery.js"></script>
         <script src="../bower_components/jquery-waypoints/waypoints.min.js"></script>
+        <script src="../bower_components/jquery-waypoints/shortcuts/sticky-elements/waypoints-sticky.min.js"></script>
         <!-- endbower -->
         <!-- endbuild -->
 
