started full width image section

--- a/app/index.html
+++ b/app/index.html
@@ -110,11 +110,13 @@
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione, aliquam omnis impedit voluptatum eveniet quisquam minus ullam quae quas maxime.
                 </div>
             </div>
-            <div class="clearfix box">
-                <div class="column full">
-                    <div class="div-box"></div>
-                </div>
-            </div>
+        </section>
+
+        <section class="office-img">
+            <div class="darken"></div>
+            <h3>
+                Transform your vision into a business reality
+            </h3>
         </section>
     
 
