added process section, added rough flicker effect on image

--- a/app/index.html
+++ b/app/index.html
@@ -89,34 +89,56 @@
         </div>
         <!-- End scrolling plug -->
 
-        <section class="test-section">
+        <section class="process">
             <div class="clearfix">
-                <div class="column fourth flow-opposite">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum, officiis impedit aliquid natus veniam eaque dolore molestias ex nulla quos.
+                <div class="column half">
+                    <p>Asking questions and listening - what is it you actually need? who is it for? what is the deadline? what do you hope to achieve? what is your budget?</p>
+                </div>
+                <div class="column half flow-opposite">
+                    <i class="fa fa-comments"></i>
                 </div>
             </div>
             <div class="clearfix">
-                <div class="column fourth">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita, aliquam, beatae officia repellat eum delectus quidem placeat iusto libero porro!
+                <div class="column half">
+                    <i class="fa fa-folder-open"></i>
+                </div>
+                <div class="column half flow-opposite">
+                    <p>Drawing up a plan - what resources do we need? who is going to do what? what is the timescale and schedule needed?</p>
                 </div>
             </div>
             <div class="clearfix">
-                <div class="column fourth flow-opposite">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, quas consectetur at rerum culpa esse eaque harum quis sequi eum.
+                <div class="column full">
+                    <div class="box text-center v-align">
+                        <p class="v-aligned">How do we need to be?</p>
+                    </div>
                 </div>
             </div>
             <div class="clearfix">
-                <div class="column fourth">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione, aliquam omnis impedit voluptatum eveniet quisquam minus ullam quae quas maxime.
+                <div class="column half">
+                    <p>The team is engaged - ensure the team know what they are doing. what is needed from the client? how we’ll communicate? where can the project be viewed during progress?</p>
+                </div>
+                <div class="column half flow-opposite">
+                    <i class="fa fa-users"></i>
+                </div>
+            </div>
+            <div class="clearfix">
+                <div class="column half">
+                    <i class="fa fa-thumbs-up"></i>
+                </div>
+                <div class="column half flow-opposite">
+                    <p>Initiation and monitoring - as soon as we get the thumbs up the project begins, ensuring new challenges &amp; additions are accounted for; reporting the progress and confirming sign-offs.</p>
                 </div>
             </div>
         </section>
 
-        <section class="office-img">
+        <section class="office-img v-align">
             <div class="darken"></div>
-            <h3>
-                Transform your vision into a business reality
-            </h3>
+            <div class="text-and-button v-aligned">
+                <h3>
+                    Transform your vision into a business reality
+                </h3>
+                <button>learn more</button>
+            </div>
         </section>
     
 
