--- a/app/index.html
+++ b/app/index.html
@@ -107,13 +107,6 @@
                     </div>
                 </div>
                 <div class="clearfix">
-                    <div class="column full">
-                        <div class="box text-center v-align">
-                            <p class="v-aligned">How do we need to be?</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="clearfix">
                     <div class="column half" data-center-center="margin-left:0" data-bottom="margin-left:-100%">
                         <p>The team is engaged - ensure the team know what they are doing. what is needed from the client? how we’ll communicate? where can the project be viewed during progress?</p>
                     </div>
@@ -130,6 +123,13 @@
                     </div>
                 </div>
             </section>
+            <div class="clearfix box-container">
+                <div class="column full">
+                    <div class="box text-center v-align">
+                        <p class="v-aligned">How do we need to be?</p>
+                    </div>
+                </div>
+            </div>
 
             <section class="office-img v-align">
                 <div class="darken"></div>
