--- a/app/index.html
+++ b/app/index.html
@@ -92,7 +92,7 @@
             <section class="process">
                 <div class="clearfix">
                     <div class="column half" data-center-center="margin-left:0" data-bottom="margin-left:-100%">
-                        <p>Asking questions and listening - what is it you actually need? who is it for? what is the deadline? what do you hope to achieve? what is your budget?</p>
+                        <p>Asking questions &amp; listening</p>
                     </div>
                     <div class="column half flow-opposite" data-center-center="margin-right:0" data-bottom="margin-right:-100%">
                         <i class="fa fa-comments"></i>
@@ -103,12 +103,12 @@
                         <i class="fa fa-folder-open"></i>
                     </div>
                     <div class="column half flow-opposite" data-center-center="margin-right:0" data-bottom="margin-right:-100%">
-                        <p>Drawing up a plan - what resources do we need? who is going to do what? what is the timescale and schedule needed?</p>
+                        <p>Drawing up a plan</p>
                     </div>
                 </div>
                 <div class="clearfix">
                     <div class="column half" data-center-center="margin-left:0" data-bottom="margin-left:-100%">
-                        <p>The team is engaged - ensure the team know what they are doing. what is needed from the client? how we’ll communicate? where can the project be viewed during progress?</p>
+                        <p>Engaging the team</p>
                     </div>
                     <div class="column half flow-opposite" data-center-center="margin-right:0" data-bottom="margin-right:-100%">
                         <i class="fa fa-users"></i>
@@ -119,7 +119,7 @@
                         <i class="fa fa-thumbs-up"></i>
                     </div>
                     <div class="column half flow-opposite" data-center-center="margin-right:0" data-bottom="margin-right:-100%">
-                        <p>Initiation and monitoring - as soon as we get the thumbs up the project begins, ensuring new challenges &amp; additions are accounted for; reporting the progress and confirming sign-offs.</p>
+                        <p>Initiation &amp; monitoring</p>
                     </div>
                 </div>
             </section>
