changed secondary font

--- a/app/index.html
+++ b/app/index.html
@@ -37,7 +37,7 @@
                         <a href="#">SERVICES</a>
                     </li>
                     <li>
-                        <a href="#">SHOWCASE</a>
+                        <a href="showcase.html">SHOWCASE</a>
                     </li>
                     <li>
                         <a href="#">CONNECT</a>
