added ribbon to process section

--- a/app/index.html
+++ b/app/index.html
@@ -90,6 +90,11 @@
             <!-- End scrolling plug -->
 
             <section class="process">
+                <div class="ribbon-protector"> 
+                    <h2 class="ribbon">
+                       <span class="ribbon-content">OUR PROCESS</span>
+                    </h2>
+                </div>
                 <div class="clearfix">
                     <div class="column half" data-center-center="margin-left:0" data-bottom="margin-left:-100%">
                         <p>Asking questions &amp; listening</p>
