added homepage blocks, fixed process animation, added scroll function to arrow

--- a/app/index.html
+++ b/app/index.html
@@ -75,7 +75,7 @@
                 </div>
             </div>
             <div class="header-spacer"></div>
-            <div class="scroll-down">
+            <div class="scroll-down" id="scroll-down">
                 <div class="semi-circle"></div>
                 <div class="chevron">
                     <i class="fa fa-angle-down"></i>
@@ -96,42 +96,46 @@
                     </h2>
                 </div>
                 <div class="clearfix">
-                    <div class="column half" data-center-center="margin-left:0" data-bottom="margin-left:-100%">
+                    <div class="column half" data-center-top="margin-left:0" data-bottom="margin-left:-100%">
                         <p>Asking questions &amp; listening</p>
                     </div>
-                    <div class="column half flow-opposite" data-center-center="margin-right:0" data-bottom="margin-right:-100%">
+                    <div class="column half flow-opposite" data-center-top="margin-right:0" data-bottom="margin-right:-100%">
                         <i class="fa fa-comments"></i>
                     </div>
                 </div>
                 <div class="clearfix">
-                    <div class="column half" data-center-center="margin-left:0" data-bottom="margin-left:-100%">
+                    <div class="column half" data-center-top="margin-left:0" data-bottom="margin-left:-100%">
                         <i class="fa fa-folder-open"></i>
                     </div>
-                    <div class="column half flow-opposite" data-center-center="margin-right:0" data-bottom="margin-right:-100%">
+                    <div class="column half flow-opposite" data-center-top="margin-right:0" data-bottom="margin-right:-100%">
                         <p>Drawing up a plan</p>
                     </div>
                 </div>
                 <div class="clearfix">
-                    <div class="column half" data-center-center="margin-left:0" data-bottom="margin-left:-100%">
+                    <div class="column half" data-center-top="margin-left:0" data-bottom="margin-left:-100%">
                         <p>Engaging the team</p>
                     </div>
-                    <div class="column half flow-opposite" data-center-center="margin-right:0" data-bottom="margin-right:-100%">
+                    <div class="column half flow-opposite" data-center-top="margin-right:0" data-bottom="margin-right:-100%">
                         <i class="fa fa-users"></i>
                     </div>
                 </div>
                 <div class="clearfix">
-                    <div class="column half" data-center-center="margin-left:0" data-bottom="margin-left:-100%">
+                    <div class="column half" data-center-top="margin-left:0" data-bottom="margin-left:-100%">
                         <i class="fa fa-thumbs-up"></i>
                     </div>
-                    <div class="column half flow-opposite" data-center-center="margin-right:0" data-bottom="margin-right:-100%">
+                    <div class="column half flow-opposite" data-center-top="margin-right:0" data-bottom="margin-right:-100%">
                         <p>Initiation &amp; monitoring</p>
                     </div>
                 </div>
             </section>
-            <div class="clearfix box-container">
+            <div class="clearfix how-do-we">
                 <div class="column full">
-                    <div class="box text-center v-align">
-                        <p class="v-aligned">How do we need to be?</p>
+                    <div class="people-icon text-center v-align">
+                        <div class="box">
+                            <i class="fa fa-users"></i>
+                            <br />
+                            <p class="v-aligned">How do we need to be?</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -142,77 +146,69 @@
                     <h3>
                         Transform your vision into a business reality
                     </h3>
-                    <button>learn more</button>
                 </div>
             </section>
-        
 
-            <section class="what-we-do text-center">
-                <div class="clearfix">
-                    <div class="column full">
-                        <h2>WHAT WE DO</h2>
-                    </div>
-                </div>
-                <hr />
-                <div class="clearfix">
-                    <div class="column full">
-                        <p class="what-we-do-description">Plugmedia is digital media and marketing agency that helps you transform your vision into a business reality.</p>
-                    </div>
-                </div>
-                <hr />
-                <div class="clearfix">
-                    <div class="column third what-we-do-block">
-                        <div class="clearfix">
-                            <i class="fa fa-code-fork"></i>
-                        </div>
-                        <div class="clearfix">
-                            <h3>PROCESS</h3>
-                        </div>
-                        <div class="clearfix">
+            <section class="home-blocks">
+                <div class="clearfix block-swarm-tactics">
+                    <div class="column full text-center v-align">
+                        <div class="title-and-text v-aligned">
+                            <h3>SWARM TACTICS &amp; TOGETHER THINKING</h3>
+                            <hr />
                             <p>
-                                Swarm tactics and together thinking - we look at the potential advantages of collaboration with each project for greater efficiency and effectiveness.
+                                We look at the potential advantages of collaboration with each project for greater efficiency and effectiveness.
                             </p>
-                        </div>
-                    </div>
-                    <div class="column third what-we-do-block">
-                        <div class="clearfix">
-                            <i class="fa fa-users"></i>
-                        </div>
-                        <div class="clearfix">
-                            <h3>THE POWER OF TOGETHER</h3>
-                        </div>
-                        <div class="clearfix">
-                            <p>
-                                We strive to continually invest our time and resources in the development of digital communities and learning programmes that focus on harnessing the best from technology.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="column third what-we-do-block">
-                        <div class="clearfix">
-                            <i class="fa fa-lightbulb-o"></i>
-                        </div>
-                        <div class="clearfix">
-                            <h3>PROJECTS</h3>
-                        </div>
-                        <div class="clearfix">
-                            <p>
-                                You are bombarded with hundreds of visual messages every day in varying forms. Our talent is engaging your audience to plug in to your messages.
-                            </p>
+                            <button>
+                                ABOUT US
+                            </button>
                         </div>
                     </div>
                 </div>
-                <div class="clearfix">
-                    <div class="column full">
-                        <ul class="what-we-do-list">
-                            <li>Design</li>
-                            <li>Branding</li>
-                            <li>Web</li>
-                            <li>Mobile</li>
-                            <li>Video</li>
-                            <li>Photography</li>
-                        </ul>
+                <div class="clearfix block-collaboration">
+                    <!--<div class="collab-darken"></div>-->
+                    <div class="column full text-center v-align">
+                        <div class="text-and-button v-aligned">
+                            <p>
+                                We invest in the development of digital communities and learning programmes that show how technology can be used to improve our lives.
+                            </p>
+                            <button>
+                                SHOWCASE
+                            </button>
+                        </div>
                     </div>
                 </div>
+                <div class="clearfix block-bombarded">
+                    <div class="column full text-center v-align">
+                        <div class="text-and-button v-aligned">
+                            <p>
+                                You are bombarded with hundreds of visual messages every day in varying forms.
+                            </p>
+                            <p>
+                                Our talent is engaging your audience to plug in to your messages.
+                            </p>
+                            <button>
+                                SERVICES
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="clearfix block-contact">
+                    <div class="column full text-center v-align">
+                        <div class="text-and-button v-aligned">
+                            <p>
+                                Want to work with us?
+                            </p>
+                            <button>
+                                Get in touch
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="footer">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit, nisi quos in blanditiis sint eligendi beatae repudiandae. Ipsum, perspiciatis, aliquam, ratione quasi illum expedita animi voluptate neque cumque saepe nobis.
+                </p>
             </section>
         </div>
 
@@ -223,6 +219,7 @@
         <script src="../bower_components/jquery-waypoints/waypoints.min.js"></script>
         <script src="../bower_components/jquery-waypoints/shortcuts/sticky-elements/waypoints-sticky.min.js"></script>
         <script src="../bower_components/skrollr/dist/skrollr.min.js"></script>
+        <script src="scripts/footerreveal.js"></script>
         <!-- endbower -->
         <!-- endbuild -->
 
