added transitions and links to home block buttons

--- a/app/index.html
+++ b/app/index.html
@@ -83,7 +83,7 @@
                 </div>
             </div>
             <div class="header-spacer"></div>
-            <div class="scroll-down" id="scroll-down">
+            <div class="scroll-down" id="scroll-down-home">
                 <div class="semi-circle"></div>
                 <div class="chevron">
                     <i class="fa fa-angle-down"></i>
@@ -168,9 +168,11 @@
                             <p>
                                 We look at the potential advantages of collaboration with each project for greater efficiency and effectiveness.
                             </p>
-                            <button>
-                                ABOUT US
-                            </button>
+                            <a href="about.html">
+                                <button>
+                                    ABOUT US
+                                </button>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -181,9 +183,11 @@
                             <p>
                                 We invest in the development of digital communities and learning programmes that show how technology can be used to improve our lives.
                             </p>
-                            <button>
-                                SHOWCASE
-                            </button>
+                            <a href="showcase.html">
+                                <button>
+                                    SHOWCASE
+                                </button>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -196,9 +200,11 @@
                             <p>
                                 Our talent is engaging your audience to plug in to <u>your</u> messages.
                             </p>
-                            <button>
-                                SERVICES
-                            </button>
+                            <a href="services.html">
+                                <button>
+                                    SERVICES
+                                </button>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -208,9 +214,11 @@
                             <p>
                                 Want to work with us?
                             </p>
-                            <button>
-                                Get in touch
-                            </button>
+                            <a href="connect.html">
+                                <button>
+                                    GET IN TOUCH
+                                </button>
+                            </a>
                         </div>
                     </div>
                 </div>
