--- a/app/Showcase.html
+++ b/app/Showcase.html
@@ -70,7 +70,7 @@
             </h1>
         </div>
         <div class="header-spacer"></div>
-        <div class="scroll-down">
+        <div class="scroll-down" id="scroll-down-showcase">
             <div class="semi-circle"></div>
             <div class="chevron">
                 <i class="fa fa-angle-down"></i>
